Fix a bug in the quote section where the flex-wrap is causing the main quote to flow onto the citatioon when the screen size is made smaller. Add a margin-bottom value of 85px to .quote so that there is always a gap between the quote and citation regardless of the screen size

--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,7 @@ ul {
     display: flex;
     flex-shrink: 1;
     flex-wrap: wrap;
+    margin-bottom: 85px;
     
 }
 
